modify navbar-add about vision mission

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
           </div>
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Page 1</a></li>
-            <li><a href="#">Page 2</a></li>
-            <li><a href="#">Page 3</a></li>
+            <li><a href="#">about</a></li>
+            <li><a href="#">vision</a></li>
+            <li><a href="#">mission</a></li>
           </ul>
         </div>
       </nav>
