add enquiry name in navbar

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <li><a href="#">about</a></li>
             <li><a href="#">vision</a></li>
             <li><a href="#">mission</a></li>
+            <li><a href="#">enquiry</a></li>
           </ul>
         </div>
       </nav>
